[tool.poetry]
name = "python-udemy-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_udemy_1"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
